# Py2Rust

./: .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FIXES_SUMMARY.md  README.md  build.rs  build.sh
.github/workflows/: rust-clippy.yml
examples/: data_structures.rs  fibonacci.py  hello_world.py  math_functions.rs  sorting.rs
src/: cli.rs  error.rs  lib.rs  main.rs
src/generator/: builtins.rs  expr_gen.rs  mod.rs  stmt_gen.rs  string_methods.rs  type_map.rs
src/ir/: class.rs  mod.rs
src/parser/: ast_visitor.rs  error.rs  mod.rs
src/transforms/: mod.rs  optimizer.rs  ownership.rs  type_inference.rs
tests/: integration_test.rs  pipeline_test.rs
