[package]
name = "py2rust"
version = "0.1.0"
edition = "2021"
description = "A Python to Rust code converter"
authors = ["Your Name"]
license = "MIT OR Apache-2.0"

[dependencies]
rustpython_parser = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
regex = "1.10"
case = "1.0"
indoc = "2.0"

[dev-dependencies]
tempfile = "3.8"
